cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(C++_Primer)

include(CTest)
enable_testing()

# 第一章
add_executable(01-01 01-start/1-main.cpp)
add_executable(01-03 01-start/3-Hello.cpp)
add_executable(01-04 01-start/4-add.cpp)
add_executable(01-07 01-start/7-wrong-commit.cpp)
add_executable(01-08 01-start/8-fix-commit.cpp)
add_executable(01-09 01-start/9.cpp)
add_executable(01-10 01-start/10.cpp)
add_executable(01-11 01-start/11.cpp)
add_executable(01-12 01-start/12.cpp)
add_executable(01-13 01-start/13.cpp)
add_executable(01-16 01-start/16.cpp)
add_executable(01-18 01-start/18.cpp)
add_executable(01-19 01-start/19.cpp)
add_executable(01-20 01-start/20.cpp 01-start/Sales_item.h)
add_executable(01-21 01-start/21.cpp 01-start/Sales_item.h)
add_executable(01-22 01-start/22.cpp 01-start/Sales_item.h)
add_executable(01-23 01-start/23.cpp 01-start/Sales_item.h)
add_executable(01-25 01-start/25.cpp 01-start/Sales_item.h)

# 第二章
add_executable(02-04 02-Variables-and-Basic-Types/4.cpp)
add_executable(02-08 02-Variables-and-Basic-Types/8.cpp)
add_executable(02-10 02-Variables-and-Basic-Types/10.cpp)
add_executable(02-18 02-Variables-and-Basic-Types/18.cpp)
add_executable(02-28 02-Variables-and-Basic-Types/28.cpp)
add_executable(02-29 02-Variables-and-Basic-Types/29.cpp)
add_executable(02-30 02-Variables-and-Basic-Types/30.cpp)
add_executable(02-31 02-Variables-and-Basic-Types/31.cpp)
add_executable(02-32 02-Variables-and-Basic-Types/32.cpp)
add_executable(02-33 02-Variables-and-Basic-Types/33.cpp)
add_executable(02-35 02-Variables-and-Basic-Types/35.cpp)
add_executable(02-36 02-Variables-and-Basic-Types/36.cpp)
add_executable(02-37 02-Variables-and-Basic-Types/37.cpp)
add_executable(02-39 02-Variables-and-Basic-Types/39.cpp)
add_executable(02-40 02-Variables-and-Basic-Types/40.cpp)
add_executable(02-41 02-Variables-and-Basic-Types/41.cpp)

# 第三章
add_executable(03-01 03-Strings-Vectors-Arrays/1.cpp)
add_executable(03-02 03-Strings-Vectors-Arrays/2.cpp)
add_executable(03-04 03-Strings-Vectors-Arrays/4.cpp)
add_executable(03-05 03-Strings-Vectors-Arrays/5.cpp)
add_executable(03-06 03-Strings-Vectors-Arrays/6.cpp)
add_executable(03-07 03-Strings-Vectors-Arrays/7.cpp)
add_executable(03-08 03-Strings-Vectors-Arrays/8.cpp)
add_executable(03-10 03-Strings-Vectors-Arrays/10.cpp)
add_executable(03-12 03-Strings-Vectors-Arrays/12.cpp)
add_executable(03-13 03-Strings-Vectors-Arrays/13.cpp)
add_executable(03-14 03-Strings-Vectors-Arrays/14.cpp)
add_executable(03-15 03-Strings-Vectors-Arrays/15.cpp)
add_executable(03-16 03-Strings-Vectors-Arrays/16.cpp)
add_executable(03-18 03-Strings-Vectors-Arrays/18.cpp)
add_executable(03-19 03-Strings-Vectors-Arrays/19.cpp)
add_executable(03-20 03-Strings-Vectors-Arrays/20.cpp)
add_executable(03-21 03-Strings-Vectors-Arrays/21.cpp)
add_executable(03-22 03-Strings-Vectors-Arrays/22.cpp)
add_executable(03-23 03-Strings-Vectors-Arrays/23.cpp)
add_executable(03-24 03-Strings-Vectors-Arrays/24.cpp)
add_executable(03-25 03-Strings-Vectors-Arrays/25.cpp)
add_executable(03-27 03-Strings-Vectors-Arrays/27.cpp)
add_executable(03-28 03-Strings-Vectors-Arrays/28.cpp)
add_executable(03-30 03-Strings-Vectors-Arrays/30.cpp)
add_executable(03-31 03-Strings-Vectors-Arrays/31.cpp)
add_executable(03-32 03-Strings-Vectors-Arrays/32.cpp)
add_executable(03-35 03-Strings-Vectors-Arrays/35.cpp)
add_executable(03-36 03-Strings-Vectors-Arrays/36.cpp)
add_executable(03-37 03-Strings-Vectors-Arrays/37.cpp)
add_executable(03-39 03-Strings-Vectors-Arrays/39.cpp)
add_executable(03-40 03-Strings-Vectors-Arrays/40.cpp)
add_executable(03-41 03-Strings-Vectors-Arrays/41.cpp)
add_executable(03-42 03-Strings-Vectors-Arrays/42.cpp)
add_executable(03-43 03-Strings-Vectors-Arrays/43.cpp)
add_executable(03-44 03-Strings-Vectors-Arrays/44.cpp)
add_executable(03-45 03-Strings-Vectors-Arrays/45.cpp)

# 第四章
add_executable(04-01 04-Expressions/1.cpp)
add_executable(04-02 04-Expressions/2.cpp)
add_executable(04-04 04-Expressions/4.cpp)
add_executable(04-05 04-Expressions/5.cpp)
add_executable(04-06 04-Expressions/6.cpp)
add_executable(04-07 04-Expressions/7.cpp)
add_executable(04-10 04-Expressions/10.cpp)
add_executable(04-11 04-Expressions/11.cpp)
add_executable(04-13 04-Expressions/13.cpp)
add_executable(04-21 04-Expressions/21.cpp)
add_executable(04-22 04-Expressions/22.cpp)
add_executable(04-25 04-Expressions/25.cpp)
add_executable(04-27 04-Expressions/27.cpp)
add_executable(04-28 04-Expressions/28.cpp)
add_executable(04-29 04-Expressions/29.cpp)


set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
