cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(C++_Primer)

include(CTest)
enable_testing()

# 第 1 章
add_executable(01-01 01-start/1.cpp)
add_executable(01-03 01-start/3.cpp)
add_executable(01-04 01-start/4.cpp)
add_executable(01-07 01-start/7.cpp)
add_executable(01-08 01-start/8.cpp)
add_executable(01-09 01-start/9.cpp)
add_executable(01-10 01-start/10.cpp)
add_executable(01-11 01-start/11.cpp)
add_executable(01-12 01-start/12.cpp)
add_executable(01-13 01-start/13.cpp)
add_executable(01-16 01-start/16.cpp)
add_executable(01-18 01-start/18.cpp)
add_executable(01-19 01-start/19.cpp)
add_executable(01-20 01-start/20.cpp 01-start/Sales_item.h)
add_executable(01-21 01-start/21.cpp 01-start/Sales_item.h)
add_executable(01-22 01-start/22.cpp 01-start/Sales_item.h)
add_executable(01-23 01-start/23.cpp 01-start/Sales_item.h)
add_executable(01-25 01-start/25.cpp 01-start/Sales_item.h)

# 第 2 章
add_executable(02-04 02-Variables-and-Basic-Types/4.cpp)
add_executable(02-08 02-Variables-and-Basic-Types/8.cpp)
add_executable(02-10 02-Variables-and-Basic-Types/10.cpp)
add_executable(02-18 02-Variables-and-Basic-Types/18.cpp)
add_executable(02-28 02-Variables-and-Basic-Types/28.cpp)
add_executable(02-29 02-Variables-and-Basic-Types/29.cpp)
add_executable(02-30 02-Variables-and-Basic-Types/30.cpp)
add_executable(02-31 02-Variables-and-Basic-Types/31.cpp)
add_executable(02-32 02-Variables-and-Basic-Types/32.cpp)
add_executable(02-33 02-Variables-and-Basic-Types/33.cpp)
add_executable(02-35 02-Variables-and-Basic-Types/35.cpp)
add_executable(02-36 02-Variables-and-Basic-Types/36.cpp)
add_executable(02-37 02-Variables-and-Basic-Types/37.cpp)
add_executable(02-39 02-Variables-and-Basic-Types/39.cpp)
add_executable(02-40 02-Variables-and-Basic-Types/40.cpp)
add_executable(02-41 02-Variables-and-Basic-Types/41.cpp)

# 第 3 章
add_executable(03-01 03-Strings-Vectors-Arrays/1.cpp)
add_executable(03-02 03-Strings-Vectors-Arrays/2.cpp)
add_executable(03-04 03-Strings-Vectors-Arrays/4.cpp)
add_executable(03-05 03-Strings-Vectors-Arrays/5.cpp)
add_executable(03-06 03-Strings-Vectors-Arrays/6.cpp)
add_executable(03-07 03-Strings-Vectors-Arrays/7.cpp)
add_executable(03-08 03-Strings-Vectors-Arrays/8.cpp)
add_executable(03-10 03-Strings-Vectors-Arrays/10.cpp)
add_executable(03-12 03-Strings-Vectors-Arrays/12.cpp)
add_executable(03-13 03-Strings-Vectors-Arrays/13.cpp)
add_executable(03-14 03-Strings-Vectors-Arrays/14.cpp)
add_executable(03-15 03-Strings-Vectors-Arrays/15.cpp)
add_executable(03-16 03-Strings-Vectors-Arrays/16.cpp)
add_executable(03-18 03-Strings-Vectors-Arrays/18.cpp)
add_executable(03-19 03-Strings-Vectors-Arrays/19.cpp)
add_executable(03-20 03-Strings-Vectors-Arrays/20.cpp)
add_executable(03-21 03-Strings-Vectors-Arrays/21.cpp)
add_executable(03-22 03-Strings-Vectors-Arrays/22.cpp)
add_executable(03-23 03-Strings-Vectors-Arrays/23.cpp)
add_executable(03-24 03-Strings-Vectors-Arrays/24.cpp)
add_executable(03-25 03-Strings-Vectors-Arrays/25.cpp)
add_executable(03-27 03-Strings-Vectors-Arrays/27.cpp)
add_executable(03-28 03-Strings-Vectors-Arrays/28.cpp)
add_executable(03-30 03-Strings-Vectors-Arrays/30.cpp)
add_executable(03-31 03-Strings-Vectors-Arrays/31.cpp)
add_executable(03-32 03-Strings-Vectors-Arrays/32.cpp)
add_executable(03-35 03-Strings-Vectors-Arrays/35.cpp)
add_executable(03-36 03-Strings-Vectors-Arrays/36.cpp)
add_executable(03-37 03-Strings-Vectors-Arrays/37.cpp)
add_executable(03-39 03-Strings-Vectors-Arrays/39.cpp)
add_executable(03-40 03-Strings-Vectors-Arrays/40.cpp)
add_executable(03-41 03-Strings-Vectors-Arrays/41.cpp)
add_executable(03-42 03-Strings-Vectors-Arrays/42.cpp)
add_executable(03-43 03-Strings-Vectors-Arrays/43.cpp)
add_executable(03-44 03-Strings-Vectors-Arrays/44.cpp)
add_executable(03-45 03-Strings-Vectors-Arrays/45.cpp)

# 第 4 章
add_executable(04-01 04-Expressions/1.cpp)
add_executable(04-02 04-Expressions/2.cpp)
add_executable(04-04 04-Expressions/4.cpp)
add_executable(04-05 04-Expressions/5.cpp)
add_executable(04-06 04-Expressions/6.cpp)
add_executable(04-07 04-Expressions/7.cpp)
add_executable(04-10 04-Expressions/10.cpp)
add_executable(04-11 04-Expressions/11.cpp)
add_executable(04-13 04-Expressions/13.cpp)
add_executable(04-21 04-Expressions/21.cpp)
add_executable(04-22 04-Expressions/22.cpp)
add_executable(04-25 04-Expressions/25.cpp)
add_executable(04-27 04-Expressions/27.cpp)
add_executable(04-28 04-Expressions/28.cpp)
add_executable(04-29 04-Expressions/29.cpp)

# 第 5 章
add_executable(05-05 05-Statements/5.cpp)
add_executable(05-06 05-Statements/6.cpp)
add_executable(05-09 05-Statements/9.cpp)
add_executable(05-10 05-Statements/10.cpp)
add_executable(05-11 05-Statements/11.cpp)
add_executable(05-12 05-Statements/12.cpp)
add_executable(05-14 05-Statements/14.cpp)
# add_executable(05-15 05-Statements/15.cpp)
add_executable(05-16 05-Statements/16.cpp)
add_executable(05-19 05-Statements/19.cpp)
add_executable(05-20 05-Statements/20.cpp)
add_executable(05-21 05-Statements/21.cpp)
add_executable(05-23 05-Statements/23.cpp)
add_executable(05-24 05-Statements/24.cpp)
add_executable(05-25 05-Statements/25.cpp)

# 第 6 章
add_executable(06-03 06-Functions/3.cpp)
add_executable(06-04 06-Functions/4.cpp)
add_executable(06-05 06-Functions/5.cpp)
add_executable(06-07 06-Functions/7.cpp)
add_executable(06-09 06-Functions/9/fact.cpp 06-Functions/9/factMain.cpp)
add_executable(06-10 06-Functions/10.cpp)
add_executable(06-11 06-Functions/11.cpp)
add_executable(06-12 06-Functions/12.cpp)
add_executable(06-17 06-Functions/17.cpp)
add_executable(06-21 06-Functions/21.cpp)
add_executable(06-22 06-Functions/22.cpp)
add_executable(06-23 06-Functions/23.cpp)
add_executable(06-25 06-Functions/25.cpp)
add_executable(06-26 06-Functions/26.cpp)
add_executable(06-27 06-Functions/27.cpp)
add_executable(06-30 06-Functions/30.cpp)
add_executable(06-33 06-Functions/33.cpp)
add_executable(06-42 06-Functions/42.cpp)
add_executable(06-47 06-Functions/47.cpp)
add_executable(06-51 06-Functions/51.cpp)
add_executable(06-55 06-Functions/55.cpp)
add_executable(06-56 06-Functions/56.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
